add about us section

--- a/index.html
+++ b/index.html
@@ -50,26 +50,34 @@
 
         <!-- about us -->
 
-        <!-- end of about us  -->
-
-        <!-- our store -->
-
-        <!-- end of our store -->
-
-        <!-- contact us  -->
-
-        <!-- end of contact us -->
-
-        <!-- footer -->
-
-        <!-- end of footer -->
-    </div>
+        <div class="row">
+            <h3 style="margin-left:20%;font-weight:bolder;"> ABOUT US </h3>
+            <div class="col-md-2">
+                <!-- blank -->
+            </div>
+            <div class="col-md-4">
+                <p>Skymall is your number one Online Shopping solution. </p>
+                <p>You can purchase all your mobile phones, tablets, computers & laptops, women's fashion, men's fashion and more online and have them delivered to you.</p>
+                <p>Skymall has payment options that suit everyone, and we have a payment-on-delivery option for extra convenience.</p>
+            </div>
 
 
+            <!-- end of our store -->
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
+            <!-- contact us  -->
+
+            <!-- end of contact us -->
+
+            <!-- footer -->
+
+            <!-- end of footer -->
+        </div>
+
+
+
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+        <script src="js/scripts.js"></script>
 </body>
 
 </html>
