add links for our store

--- a/index.html
+++ b/index.html
@@ -60,24 +60,52 @@
                 <p>You can purchase all your mobile phones, tablets, computers & laptops, women's fashion, men's fashion and more online and have them delivered to you.</p>
                 <p>Skymall has payment options that suit everyone, and we have a payment-on-delivery option for extra convenience.</p>
             </div>
-
-
-            <!-- end of our store -->
-
-            <!-- contact us  -->
-
-            <!-- end of contact us -->
-
-            <!-- footer -->
-
-            <!-- end of footer -->
+            <div class="col-md-4">
+                <img src="assets/online shop.jpg" alt="image for online shop" height="270px" width="500px">
+            </div>
+            <div class="col-md-2">
+                <!-- blank -->
+            </div>
         </div>
 
+        <!-- end of about us  -->
+
+        <!-- our store -->
+        <div class="container">
+            <h2 align="center">Our Store</h2>
+            <nav class="navbar">
 
 
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
+                <ul>
+                    <li> <a href="Home.html">All Products</a> </li>
+                    <li><a href="Furniture.html">Furniture</a> </li>
+                    <li><a href="Electronics.html">Electronics</a> </li>
+                    <li> <a href="Fashion.html">Fashion</a> </li>
+                    <li> <a href="Groceries.html">Groceries</a> </li>
+                </ul>
+            </nav>
+
+
+
+
+        </div>
+
+        <!-- end of our store -->
+
+        <!-- contact us  -->
+
+        <!-- end of contact us -->
+
+        <!-- footer -->
+
+        <!-- end of footer -->
+    </div>
+
+
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
