add rows for products

--- a/index.html
+++ b/index.html
@@ -85,20 +85,71 @@
                 </ul>
             </nav>
 
+            <div class="store pics">
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/dress.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
+
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/shoes.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/furniture1.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/groceries.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
 
 
+
+
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/food1.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/furniture2.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/electronics1.jpeg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/kids.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/kids2.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/fruits1.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/shoes2.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/earphones.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                </div>
+
+            </div>
 
         </div>
 
-        <!-- end of our store -->
 
-        <!-- contact us  -->
+    </div>
 
-        <!-- end of contact us -->
+    <!-- end of our store -->
 
-        <!-- footer -->
+    <!-- contact us  -->
 
-        <!-- end of footer -->
+    <!-- end of contact us -->
+
+    <!-- footer -->
+
+    <!-- end of footer -->
     </div>
 
 
