--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <!-- slideshow carousel -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/furniture.jpg" alt="img">
+                    <img src="/images/furniture.jpg" alt="img" style="width: 80%">
                     <div class="carousel-caption">
                         <h3>Quality Products</h3>
                         <a href="#"><button class="btn">See More</button></a>
@@ -235,7 +235,7 @@
     <!-- footer -->
 
     <!-- end of footer -->
-    </div>
+
 
 
 
