--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- css link -->
-    <link rel="stylesheet" href="css/styles.css">
+
     <!-- bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
     <!-- font awesome link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
-
+    <link rel="stylesheet" href="css/styles.css">
     <title>SKYMALL SHOPPING</title>
 </head>
 
@@ -57,24 +56,24 @@
                         <a href="#"><button class="btn">See More</button></a>
                     </div>
                 </div>
-                <div class="carousel-item active">
-                    <img src="/images/furniture.jpg" alt="img">
+                <div class="carousel-item">
+                    <img src="/images/tech.jpg" alt="img">
                     <div class="carousel-caption">
-                        <h3>Quality Products</h3>
+                        <h3>Awesome Tech</h3>
                         <a href="#"><button class="btn">See More</button></a>
                     </div>
                 </div>
-                <div class="carousel-item active">
-                    <img src="/images/furniture.jpg" alt="img">
+                <div class="carousel-item">
+                    <img src="/images/groceries2.jpg" alt="img">
                     <div class="carousel-caption">
-                        <h3>Quality Products</h3>
+                        <h3>Fresh Groceries</h3>
                         <a href="#"><button class="btn">See More</button></a>
                     </div>
                 </div>
-                <div class="carousel-item active">
-                    <img src="/images/furniture.jpg" alt="img">
+                <div class="carousel-item">
+                    <img src="/images/shoes2.jpg" alt="img">
                     <div class="carousel-caption">
-                        <h3>Quality Products</h3>
+                        <h3>Trending Fashion</h3>
                         <a href="#"><button class="btn">See More</button></a>
                     </div>
                 </div>
