--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- css link -->
-    <link rel="stylesheet" href="css/styles.css">
+
     <!-- bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- font awesome link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
-
+    <link rel="stylesheet" href="css/styles.css">
     <title>SKYMALL SHOPPING</title>
 </head>
 
@@ -51,30 +51,30 @@
             <!-- slideshow carousel -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/furniture.jpg" alt="img">
+                    <img src="/images/furniture.jpg" alt="img" style="width: 80%">
                     <div class="carousel-caption">
                         <h3>Quality Products</h3>
                         <a href="#"><button class="btn">See More</button></a>
                     </div>
                 </div>
-                <div class="carousel-item active">
-                    <img src="/images/furniture.jpg" alt="img">
+                <div class="carousel-item">
+                    <img src="/images/tech.jpg" alt="img">
                     <div class="carousel-caption">
-                        <h3>Quality Products</h3>
+                        <h3>Awesome Tech</h3>
                         <a href="#"><button class="btn">See More</button></a>
                     </div>
                 </div>
-                <div class="carousel-item active">
-                    <img src="/images/furniture.jpg" alt="img">
+                <div class="carousel-item">
+                    <img src="/images/groceries2.jpg" alt="img">
                     <div class="carousel-caption">
-                        <h3>Quality Products</h3>
+                        <h3>Fresh Groceries</h3>
                         <a href="#"><button class="btn">See More</button></a>
                     </div>
                 </div>
-                <div class="carousel-item active">
-                    <img src="/images/furniture.jpg" alt="img">
+                <div class="carousel-item">
+                    <img src="/images/shoes2.jpg" alt="img">
                     <div class="carousel-caption">
-                        <h3>Quality Products</h3>
+                        <h3>Trending Fashion</h3>
                         <a href="#"><button class="btn">See More</button></a>
                     </div>
                 </div>
@@ -91,78 +91,157 @@
 
         <!-- about us -->
 
+        <div class="row">
+            <h3 style="margin-left:20%;font-weight:bolder;"> ABOUT US </h3>
+            <div class="col-md-2">
+                <!-- blank -->
+            </div>
+            <div class="col-md-4">
+                <p>Skymall is your number one Online Shopping solution. </p>
+                <p>You can purchase all your mobile phones, tablets, computers & laptops, women's fashion, men's fashion and more online and have them delivered to you.</p>
+                <p>Skymall has payment options that suit everyone, and we have a payment-on-delivery option for extra convenience.</p>
+            </div>
+            <div class="col-md-4">
+                <img src="assets/online shop.jpg" alt="image for online shop" height="270px" width="500px">
+            </div>
+            <div class="col-md-2">
+                <!-- blank -->
+            </div>
+        </div>
+
         <!-- end of about us  -->
 
         <!-- our store -->
+        <div class="container">
+            <h2 align="center">Our Store</h2>
+            <nav class="navbar">
 
-        <!-- end of our store -->
 
-        <!-- contact us  -->
-        <section id="contact">
-            <h3 class="text-center">Contact Us</h3>
-            <div class="container">
+                <ul>
+                    <li> <a href="Home.html">All Products</a> </li>
+                    <li><a href="Furniture.html">Furniture</a> </li>
+                    <li><a href="Electronics.html">Electronics</a> </li>
+                    <li> <a href="Fashion.html">Fashion</a> </li>
+                    <li> <a href="Groceries.html">Groceries</a> </li>
+                </ul>
+            </nav>
 
-                <div class="row contact">
-                    <div class="col-lg-6 icons">
-                        <ul>
-                            <li><i class="fa-solid fa-phone"></i> Call To Order: O712345678</li>
-                            <li><i class="fa-brands fa-whatsapp"></i> Whatsapp Number: 0712345678</li>
-                            <li><i class="fa-brands fa-slack"></i> Slack: Sky Mall</li>
-                            <li><i class="fa-solid fa-envelope"></i> Email: skymall@gmail.com</li>
-                            <li><i class="fa-solid fa-location-pin"></i> Visit our Offices at Sky Mall Towers</li>
-                        </ul>
+            <div class="store pics">
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/dress.jpg" alt="dress picture" height="300px" width="300px">
                     </div>
-                    <div class="col-lg-6">
-                        <div id="mc_embed_signup">
+
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/shoes.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/furniture1.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/groceries.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
 
 
 
-                            <form
-                                action="https://gmail.us14.list-manage.com/subscribe/post?u=8d8a5b81293206b47b521e3e8&amp;id=8c7c003574"
-                                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
-                                class="validate d-flex flex-column align-self-center contact-us-overlay" target="_blank"
-                                novalidate>
-                                <div id="mc_embed_signup_scroll">
 
-                                    <div class="d-flex mb-3">
-                                        <input class="form-control" type="text" name="name" id="mce-FNAME"
-                                            placeholder="Name..." />
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/food1.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/furniture2.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/electronics1.jpeg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/kids.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/kids2.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/fruits1.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/shoes2.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/ourstore/earphones.jpg" alt="dress picture" height="300px" width="300px">
+                    </div>
+                </div>
 
-                                        <input class="form-control" type="email" name="email" id="mce-EMAIL"
-                                            placeholder="Email..." required />
-                                    </div>
-                                    <textarea class="form-control" name="textarea" id="mce-LNAME" cols="30" rows="5"
-                                        placeholder="Your message here..."></textarea>
-                                    <button type="submit" class="btn btn-secondary mt-2 show-msg"
-                                        id="mc-embedded-subscribe">SUBMIT</button>
-                                    <p style="padding: 5px;" class="ms"></p>
-                                    <div id="mce-responses" class="clear foot">
-                                        <div class="response" id="mce-error-response" style="display:none"></div>
-                                        <div class="response" id="mce-success-response" style="display:none"></div>
-                                    </div>
-                                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input
-                                            type="text" name="b_8d8a5b81293206b47b521e3e8_8c7c003574" tabindex="-1"
-                                            value=""></div>
+            </div>
+
+        </div>
+
+
+    </div>
+
+    <!-- end of our store -->
+
+    <!-- contact us  -->
+
+    <!-- end of contact us -->
+    <!-- contact us  -->
+    <section id="contact">
+        <h3 class="text-center">Contact Us</h3>
+        <div class="container">
+
+            <div class="row contact">
+                <div class="col-lg-6 icons">
+                    <ul>
+                        <li><i class="fa-solid fa-phone"></i> Call To Order: O712345678</li>
+                        <li><i class="fa-brands fa-whatsapp"></i> Whatsapp Number: 0712345678</li>
+                        <li><i class="fa-brands fa-slack"></i> Slack: Sky Mall</li>
+                        <li><i class="fa-solid fa-envelope"></i> Email: skymall@gmail.com</li>
+                        <li><i class="fa-solid fa-location-pin"></i> Visit our Offices at Sky Mall Towers</li>
+                    </ul>
+                </div>
+                <div class="col-lg-6">
+                    <div id="mc_embed_signup">
+
+
+
+                        <form action="https://gmail.us14.list-manage.com/subscribe/post?u=8d8a5b81293206b47b521e3e8&amp;id=8c7c003574" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate d-flex flex-column align-self-center contact-us-overlay"
+                            target="_blank" novalidate>
+                            <div id="mc_embed_signup_scroll">
+
+                                <div class="d-flex mb-3">
+                                    <input class="form-control" type="text" name="name" id="mce-FNAME" placeholder="Name..." />
+
+                                    <input class="form-control" type="email" name="email" id="mce-EMAIL" placeholder="Email..." required />
                                 </div>
-                            </form>
-                        </div>
+                                <textarea class="form-control" name="textarea" id="mce-LNAME" cols="30" rows="5" placeholder="Your message here..."></textarea>
+                                <button type="submit" class="btn btn-secondary mt-2 show-msg" id="mc-embedded-subscribe">SUBMIT</button>
+                                <p style="padding: 5px;" class="ms"></p>
+                                <div id="mce-responses" class="clear foot">
+                                    <div class="response" id="mce-error-response" style="display:none"></div>
+                                    <div class="response" id="mce-success-response" style="display:none"></div>
+                                </div>
+                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_8d8a5b81293206b47b521e3e8_8c7c003574" tabindex="-1" value=""></div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- end of contact us -->
+        </div>
+    </section>
+    <!-- end of contact us -->
 
-        <!-- footer -->
+    <!-- footer -->
 
-        <!-- end of footer -->
-    </div>
-
+    <!-- end of footer -->
 
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-        integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
