--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <li> <a href="Home.html">All Products</a> </li>
                     <li><a href="Furniture.html">Furniture</a> </li>
                     <li><a href="Electronics.html">Electronics</a> </li>
-                    <li> <a href="Fashion.html">Fashion</a> </li>
+                    <li> <a href="fashion.html">Fashion</a> </li>
                     <li> <a href="Groceries.html">Groceries</a> </li>
                 </ul>
             </nav>
