--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li> <a href="Home.html">home</a> </li>
                         <li><a href="about.html">About</a> </li>
                         <li><a href="featured.html">Featured</a> </li>
-                        <li> <a href="gallery.html">Gallery</a> </li>
+                        <li> <a href="groceries.html">Groceries</a> </li>
                         <li> <a href="deals.html">Deals</a> </li>
                     </ul>
 
