--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
     <!-- bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <<<<<<< HEAD=======< !-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> >>>>>>> master
-        <!-- font awesome link -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
-        <link rel="stylesheet" href="css/styles.css">
-        <title>SKYMALL SHOPPING</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> >>>>>>> master
+    <!-- font awesome link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>SKYMALL SHOPPING</title>
 </head>
 
 <body>
@@ -86,9 +86,7 @@
             </button>
         </div>
 
-        <!-- end of carrousel -->
 
-        <!-- about us -->
 
         <div class="row">
             <h3 style="margin-left:20%;font-weight:bolder;"> ABOUT US </h3>
@@ -108,9 +106,7 @@
             </div>
         </div>
 
-        <!-- end of about us  -->
 
-        <!-- our store -->
         <div class="container">
             <h2 align="center">Our Store</h2>
             <nav class="navbar">
@@ -183,12 +179,7 @@
 
     </div>
 
-    <!-- end of our store -->
 
-    <!-- contact us  -->
-
-    <!-- end of contact us -->
-    <!-- contact us  -->
     <section id="contact">
         <h3 class="text-center">Contact Us</h3>
         <div class="container">
@@ -232,7 +223,7 @@
             </div>
         </div>
     </section>
-    <!-- end of contact us -->
+
 
     <footer class="footer">
         <div class="row">
@@ -278,64 +269,6 @@
         <p>Designed and developed by Aggrey, Beth, Kipkoech &Linet</p>
 
     </footer>
-
-
-
-    <!-- end of our store -->
-
-    <!-- contact us  -->
-
-    <!-- end of contact us -->
-    <!-- contact us  -->
-    <section id="contact">
-        <h3 class="text-center">Contact Us</h3>
-        <div class="container">
-
-            <div class="row contact">
-                <div class="col-lg-6 icons">
-                    <ul>
-                        <li><i class="fa-solid fa-phone"></i> Call To Order: O712345678</li>
-                        <li><i class="fa-brands fa-whatsapp"></i> Whatsapp Number: 0712345678</li>
-                        <li><i class="fa-brands fa-slack"></i> Slack: Sky Mall</li>
-                        <li><i class="fa-solid fa-envelope"></i> Email: skymall@gmail.com</li>
-                        <li><i class="fa-solid fa-location-pin"></i> Visit our Offices at Sky Mall Towers</li>
-                    </ul>
-                </div>
-                <div class="col-lg-6">
-                    <div id="mc_embed_signup">
-
-
-
-                        <form action="https://gmail.us14.list-manage.com/subscribe/post?u=8d8a5b81293206b47b521e3e8&amp;id=8c7c003574" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate d-flex flex-column align-self-center contact-us-overlay"
-                            target="_blank" novalidate>
-                            <div id="mc_embed_signup_scroll">
-
-                                <div class="d-flex mb-3">
-                                    <input class="form-control" type="text" name="name" id="mce-FNAME" placeholder="Name..." />
-
-                                    <input class="form-control" type="email" name="email" id="mce-EMAIL" placeholder="Email..." required />
-                                </div>
-                                <textarea class="form-control" name="textarea" id="mce-LNAME" cols="30" rows="5" placeholder="Your message here..."></textarea>
-                                <button type="submit" class="btn btn-secondary mt-2 show-msg" id="mc-embedded-subscribe">SUBMIT</button>
-                                <p style="padding: 5px;" class="ms"></p>
-                                <div id="mce-responses" class="clear foot">
-                                    <div class="response" id="mce-error-response" style="display:none"></div>
-                                    <div class="response" id="mce-success-response" style="display:none"></div>
-                                </div>
-                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_8d8a5b81293206b47b521e3e8_8c7c003574" tabindex="-1" value=""></div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- end of contact us -->
-
-    <!-- footer -->
-
-    <!-- end of footer -->
-
 
 
 
