modified css, added images, modified html

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                     <a href="#" class="logo"><i class="fas fa-shopping-bag"></i> SkyMall</a>
 
                     <ul>
-                        <li> <a href="Home.html">home</a> </li>
-                        <li><a href="about.html">About</a> </li>
-                        <li><a href="featured.html">Featured</a> </li>
-                        <li> <a href="groceries.html">Groceries</a> </li>
-                        <li> <a href="deals.html">Deals</a> </li>
+                        <li> <a href="">home</a> </li>
+                        <li><a href="">About</a> </li>
+                        <li><a href="">Featured</a> </li>
+                        <li> <a href="">Groceries</a> </li>
+                        <li> <a href="">Deals</a> </li>
                     </ul>
 
                     <form action="">
@@ -121,7 +121,7 @@
                     <li><a href="Furniture.html">Furniture</a> </li>
                     <li><a href="Electronics.html">Electronics</a> </li>
                     <li> <a href="Fashion.html">Fashion</a> </li>
-                    <li> <a href="Groceries.html">Groceries</a> </li>
+                    <li> <a href="groceries.html">Groceries</a> </li>
                 </ul>
             </nav>
 
