add paragraphs and button

--- a/fashion.html
+++ b/fashion.html
@@ -12,6 +12,8 @@
     <!-- font awesome link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/fashion.css">
+
     <title>SKYMALL SHOPPING</title>
 </head>
 
@@ -26,11 +28,11 @@
                     <a href="#" class="logo"><i class="fas fa-shopping-bag"></i> SkyMall</a>
 
                     <ul>
-                        <li> <a href="Home.html">home</a> </li>
-                        <li><a href="about.html">About</a> </li>
-                        <li><a href="featured.html">Featured</a> </li>
-                        <li> <a href="gallery.html">Gallery</a> </li>
-                        <li> <a href="deals.html">Deals</a> </li>
+                        <li> <a href="index.html">Home</a> </li>
+                        <li><a href="index.html">About us</a> </li>
+                        <li><a href="index.html">Store</a> </li>
+                        <li> <a href="index.html">Contact us</a> </li>
+
                     </ul>
 
                     <form action="">
@@ -49,45 +51,81 @@
             <div class="row">
                 <div class="col-md-3">
                     <img src="assets/ourstore/dress.jpg" alt="dress picture" height="300px" width="300px">
+                    <h6>Dress : $50 </h6>
+                    <input type="submit" name="submit" id="submit" value="Add to cart">
+
                 </div>
 
                 <div class="col-md-3">
                     <img src="assets/ourstore/shoes.jpg" alt="dress picture" height="300px" width="300px">
+                    <h6>Fila shoes : $65 </h6>
+                    <input type="submit" name="submit" id="submit" value="Add to cart">
+
                 </div>
                 <div class="col-md-3">
                     <img src="assets/ourstore/boots.jpg" alt="dress picture" height="300px" width="300px">
+                    <h6>Boots : $72</h6>
+                    <input type="submit" name="submit" id="submit" value="Add to cart">
+
                 </div>
                 <div class="col-md-3">
                     <img src="assets/ourstore/jewellery1.jpg" alt="dress picture" height="300px" width="300px">
+                    <h6>Silver jewellery : $100 </h6>
+                    <input type="submit" name="submit" id="submit" value="Add to cart">
+
                 </div>
 
             </div>
             <div class="row">
                 <div class="col-md-3">
                     <img src="assets/ourstore/kids3.jpg" alt="dress picture" height="300px" width="300px">
+                    <h6>Kids outfit : $45 </h6>
+                    <input type="submit" name="submit" id="submit" value="Add to cart">
+
                 </div>
                 <div class="col-md-3">
                     <img src="assets/ourstore/wedges.jpg" alt="dress picture" height="300px" width="300px">
+                    <h6>Wedge heels : $60</h6>
+                    <input type="submit" name="submit" id="submit" value="Add to cart">
+
                 </div>
                 <div class="col-md-3">
                     <img src="assets/ourstore/necklace.jpeg" alt="dress picture" height="300px" width="300px">
+                    <h6> Gold Necklace : $70 </h6>
+                    <input type="submit" name="submit" id="submit" value="Add to cart">
+
                 </div>
                 <div class="col-md-3">
                     <img src="assets/ourstore/kids.jpg" alt="dress picture" height="300px" width="300px">
+                    <h6>Kids outfit : $55 </h6>
+                    <input type="submit" name="submit" id="submit" value="Add to cart">
+
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-3">
                     <img src="assets/ourstore/kids2.jpg" alt="dress picture" height="300px" width="300px">
+                    <h6>kids outfit : $50 </h6>
+                    <input type="submit" name="submit" id="submit" value="Add to cart">
+
                 </div>
                 <div class="col-md-3">
                     <img src="assets/ourstore/cloth1.jpg" alt="dress picture" height="300px" width="300px">
+                    <h6> crop hoodie: $50 </h6>
+                    <input type="submit" name="submit" id="submit" value="Add to cart">
+
                 </div>
                 <div class="col-md-3">
                     <img src="assets/ourstore/shoes2.jpg" alt="dress picture" height="300px" width="300px">
+                    <h6>platform sandals : $65 </h6>
+                    <input type="submit" name="submit" id="submit" value="Add to cart">
+
                 </div>
                 <div class="col-md-3">
                     <img src="assets/ourstore/earphones.jpg" alt="dress picture" height="300px" width="300px">
+                    <h6>Earphones: $ 40 </h6>
+                    <input type="submit" name="submit" id="submit" value="Add to cart">
+
                 </div>
             </div>
 
