--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
                 <ul>
                     <li> <a href="Home.html">All Products</a> </li>
-                    <li><a href="Furniture.html">Furniture</a> </li>
+                    <li><a href="furniture.html">Furniture</a> </li>
                     <li><a href="Electronics.html">Electronics</a> </li>
                     <li> <a href="fashion.html">Fashion</a> </li>
                     <li> <a href="Groceries.html">Groceries</a> </li>
