Add relative path for images

--- a/Electronics.html
+++ b/Electronics.html
@@ -16,11 +16,7 @@
         <h4>electronics</h4>
     </div>
     <div class="container">
-
-        <div class="overlay">
-            <img src="/images/imr6.jpg">
-            Ksh 90,000
-        </div>
+        <img src="/assets/images/imr6.jpg">
         <img src="/assets/images/sora-khan-3U2NAo-VHSE-unsplash.jpg">
         <img src="/assets/images/mulyadi-DkPiCUW3Jdo-unsplash.jpg">
         <img src="/assets/images/ps5.jpg">
