--- a/Electronics.html
+++ b/Electronics.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/Electronic.css">
     <title>Document</title>
 </head>
@@ -18,8 +17,7 @@
     <div class="container">
 
         <div class="overlay">
-            <img src="/images/imr6.jpg">
-            Ksh 90,000
+            <img src="/images/imr6.jpg"> Ksh 90,000
         </div>
         <img src="/assets/images/sora-khan-3U2NAo-VHSE-unsplash.jpg">
         <img src="/assets/images/mulyadi-DkPiCUW3Jdo-unsplash.jpg">
