feat: furtures- adds more furtures to the page

--- a/furniture.html
+++ b/furniture.html
@@ -14,28 +14,30 @@
 </head>
 <body>
 <div class="container-fluid">
-    <header>
+    <header class="header">
+        <div class="header-1">
+            <a href="#" class="logo"><i class="fas fa-shopping-basket"></i>Skymall</a>
+            <form action="" class="search-box-container">
+                <input type="search" id="search-box" placeholder="search here....">
+                <label for="search-box" class="fas fa-search"></label>
+            </form>
+        </div>
 
-        <div class="header">
+        <div class="header-2">
+            <div id="menu-bar" class="fas fa-bars"></div>
             <nav class="navbar">
-                <a href="#" class="logo"><i class="fas fa-shopping-bag"></i> SkyMall</a>
-
-                <ul>
-                    <li> <a href="index.html">Home</a> </li>
-                    <li><a href="index.html">About</a> </li>
-                    <li> <a href="index.html">Store</a> </li>
-                    <li><a href="index.html">Contact Us</a> </li>
-                </ul>
-
-                <form action="">
-                    <input type="search" placeholder="search here ..." id="search">
-                    <label for="search" class="fas fa-search"></label>
-
-                </form>
-
+                <a href="index.html">home</a>
+                <a href="fashion.html">Fashion</a>
+                <a href="furniture.html">furnitures</a>
+                <a href="Electronics.html">Electronics</a>
 
             </nav>
 
+            <div class="icons">
+                <a href="#" class="fas fa-shopping-cart"></a>
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-shopping-cart"></a>
+            </div>
         </div>
     </header>
 
@@ -59,23 +61,23 @@
     <div class="row">
         <div class="col-md-3">
             <img src="assets/furniture/office1.jpg" alt="dress picture" height="200px" width="300px">
-            <h6>Dress : $50 </h6>
+            <h6>Office Furniture: $50 </h6>
             <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
 
         <div class="col-md-3">
             <img src="assets/furniture/office2.jpg" alt="dress picture" height="200px" width="300px">
-            <h6>Dress : $50 </h6>
+            <h6>Office Furniture: $50 </h6>
             <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
         <div class="col-md-3">
             <img src="assets/furniture/office3.jpg" alt="dress picture" height="200px" width="300px">
-            <h6>Dress : $50 </h6>
+            <h6>Office Furniture: $50 </h6>
             <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
         <div class="col-md-3">
             <img src="assets/furniture/office4.jpg" alt="dress picture" height="200px" width="300px">
-            <h6>Dress : $50 </h6>
+            <h6>Office Furniture: $50 </h6>
             <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
 
@@ -83,44 +85,44 @@
     <div class="row">
         <div class="col-md-3">
             <img src="assets/furniture/office5.jpg" alt="dress picture" height="200px" width="300px">
-            <h6>Dress : $50 </h6>
+            <h6>Office Furniture: $50 </h6>
             <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
         <div class="col-md-3">
             <img src="assets/furniture/office6.jpg" alt="dress picture" height="200px" width="300px">
-            <h6>Dress : $50 </h6>
+            <h6>Office Furniture: $50 </h6>
             <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
         <div class="col-md-3">
             <img src="assets/furniture/office7.jpg" alt="dress picture" height="200px" width="300px">
-            <h6>Dress : $50 </h6>
+            <h6>Office Furniture: $50 </h6>
             <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
         <div class="col-md-3">
             <img src="assets/furniture/office8.jpg" alt="dress picture" height="200px" width="300px">
-            <h6>Dress : $50 </h6>
+            <h6>Office Furniture: $50 </h6>
             <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
     </div>
     <div class="row">
         <div class="col-md-3">
             <img src="assets/furniture/office9.jpg" alt="dress picture" height="200px" width="300px">
-            <h6>Dress : $50 </h6>
+            <h6>Office Furniture: $50 </h6>
             <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
         <div class="col-md-3">
             <img src="assets/furniture/office10.jpg" alt="dress picture" height="200px" width="300px">
-            <h6>Dress : $50 </h6>
+            <h6>Office Furniture: $50 </h6>
             <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
         <div class="col-md-3">
             <img src="assets/furniture/office11.jpg" alt="dress picture" height="200px" width="300px">
-            <h6>Dress : $50 </h6>
+            <h6>Office Furniture: $50 </h6>
             <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
         <div class="col-md-3">
             <img src="assets/furniture/office12.png" alt="dress picture" height="200px" width="300px">
-            <h6>Dress : $50 </h6>
+            <h6>Office Furniture: $50 </h6>
             <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
     </div>
@@ -132,23 +134,23 @@
         <div class="row">
             <div class="col-md-3">
                 <img src="assets/furniture/living1.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>living Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
 
             <div class="col-md-3">
                 <img src="assets/furniture/living2.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>living Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="col-md-3">
                 <img src="assets/furniture/living3.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>living Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="col-md-3">
                 <img src="assets/furniture/living4.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>living Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
 
@@ -156,44 +158,44 @@
         <div class="row">
             <div class="col-md-3">
                 <img src="assets/furniture/living5.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>living Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="col-md-3">
                 <img src="assets/furniture/living7.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>living Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="col-md-3">
                 <img src="assets/furniture/living8.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>living Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="col-md-3">
                 <img src="assets/furniture/living9.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>living Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
         </div>
         <div class="row">
             <div class="col-md-3">
                 <img src="assets/furniture/living10.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>living Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="col-md-3">
                 <img src="assets/furniture/living11.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>living Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="col-md-3">
                 <img src="assets/furniture/living12.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>living Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="col-md-3">
                 <img src="assets/furniture/living6.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>living Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
         </div>
@@ -205,23 +207,23 @@
         <div class="row">
             <div class="col-md-3">
                 <img src="assets/furniture/dining.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>Dining Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
 
             <div class="col-md-3">
                 <img src="assets/furniture/dining2.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>Dining Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="col-md-3">
                 <img src="assets/furniture/dining3.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>Dining Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="col-md-3">
                 <img src="assets/furniture/dining4.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>Dining Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
 
@@ -229,49 +231,122 @@
         <div class="row">
             <div class="col-md-3">
                 <img src="assets/furniture/dining5.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>Dining Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="col-md-3">
                 <img src="assets/furniture/dining6.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>Dining Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="col-md-3">
                 <img src="assets/furniture/dining7.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>Dining Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="col-md-3">
                 <img src="assets/furniture/dining8.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>Dining Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
         </div>
         <div class="row">
             <div class="col-md-3">
                 <img src="assets/furniture/dining9.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>Dining Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="col-md-3">
                 <img src="assets/furniture/dining10.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>Dining Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="col-md-3">
                 <img src="assets/furniture/dining11.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>Dining Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="col-md-3">
                 <img src="assets/furniture/dining12.jpg" alt="dress picture" height="200px" width="300px">
-                <h6>Dress : $50 </h6>
+                <h6>Dining Room Furniture : $50 </h6>
                 <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
         </div>
     </section>
     <!--End of the Living Room Furniture-->
+
+    <!--Start of Bedroom Room Furniture-->
+    <section id="bedroom">
+        <div class="row">
+            <div class="col-md-3">
+                <img src="assets/furniture/bed1.jpg" alt="dress picture" height="200px" width="300px">
+                <h6>Dining Room Furniture : $50 </h6>
+                <input type="submit" name="submit" id="submit" value="Add to cart">
+            </div>
+
+            <div class="col-md-3">
+                <img src="assets/furniture/bed2.jpg" alt="dress picture" height="200px" width="300px">
+                <h6>Dining Room Furniture : $50 </h6>
+                <input type="submit" name="submit" id="submit" value="Add to cart">
+            </div>
+            <div class="col-md-3">
+                <img src="assets/furniture/bed3.jpg" alt="dress picture" height="200px" width="300px">
+                <h6>Dining Room Furniture : $50 </h6>
+                <input type="submit" name="submit" id="submit" value="Add to cart">
+            </div>
+            <div class="col-md-3">
+                <img src="assets/furniture/bed4.jpg" alt="dress picture" height="200px" width="300px">
+                <h6>Dining Room Furniture : $50 </h6>
+                <input type="submit" name="submit" id="submit" value="Add to cart">
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+                <img src="assets/furniture/bed5.jpg" alt="dress picture" height="200px" width="300px">
+                <h6>Dining Room Furniture : $50 </h6>
+                <input type="submit" name="submit" id="submit" value="Add to cart">
+            </div>
+            <div class="col-md-3">
+                <img src="assets/furniture/bed6.jpg" alt="dress picture" height="200px" width="300px">
+                <h6>Dining Room Furniture : $50 </h6>
+                <input type="submit" name="submit" id="submit" value="Add to cart">
+            </div>
+            <div class="col-md-3">
+                <img src="assets/furniture/bed7.jpg" alt="dress picture" height="200px" width="300px">
+                <h6>Dining Room Furniture : $50 </h6>
+                <input type="submit" name="submit" id="submit" value="Add to cart">
+            </div>
+            <div class="col-md-3">
+                <img src="assets/furniture/bed8.jpg" alt="dress picture" height="200px" width="300px">
+                <h6>Dining Room Furniture : $50 </h6>
+                <input type="submit" name="submit" id="submit" value="Add to cart">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+                <img src="assets/furniture/bed9.jpg" alt="dress picture" height="200px" width="300px">
+                <h6>Dining Room Furniture : $50 </h6>
+                <input type="submit" name="submit" id="submit" value="Add to cart">
+            </div>
+            <div class="col-md-3">
+                <img src="assets/furniture/bed10.jpg" alt="dress picture" height="200px" width="300px">
+                <h6>Dining Room Furniture : $50 </h6>
+                <input type="submit" name="submit" id="submit" value="Add to cart">
+            </div>
+            <div class="col-md-3">
+                <img src="assets/furniture/bed11.jpg" alt="dress picture" height="200px" width="300px">
+                <h6>Dining Room Furniture : $50 </h6>
+                <input type="submit" name="submit" id="submit" value="Add to cart">
+            </div>
+            <div class="col-md-3">
+                <img src="assets/furniture/bed12.jpg" alt="dress picture" height="200px" width="300px">
+                <h6>Dining Room Furniture : $50 </h6>
+                <input type="submit" name="submit" id="submit" value="Add to cart">
+            </div>
+        </div>
+    </section>
+    <!--End of the Bedroom Room Furniture-->
 </div>
 
 </body>
