--- a/groceries.html
+++ b/groceries.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- font awesome link -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
-    <link rel="stylesheet" href="groceries.css">
+    <link rel="stylesheet" href="css/groceries.css">
 </head>
 <body>
     <header>
@@ -23,10 +23,11 @@
         <div class="header-2">
             <div id="menu-bar" class="fas fa-bars"></div>
             <nav class="navbar">
-                <a href="home.html">home</a>
-                <a href="groceries.html">Groceries</a>
-                <a href="furnitures.html">furnitures</a>
-                <a href="electronics.html">Electronics</a>
+                <a href="index.html">home</a>
+                <a href="fashion.html">Fashion</a>
+                <a href="furniture.html">furnitures</a>
+                <a href="Electronics.html">Electronics</a>
+
             </nav>
 
             <div class="icons">
