--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- font awesome link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
-    
+
     <link rel="stylesheet" href="css/styles.css">
     <title>SKYMALL SHOPPING</title>
 </head>
@@ -56,28 +56,28 @@
             <!-- slideshow carousel -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/furniture.jpg" alt="img">
+                    <img src="images/furniture.jpg" alt="img">
                     <div class="carousel-caption">
                         <h3>Quality Products</h3>
                         <a href="#"><button class="btn">See More</button></a>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/tech.jpg" alt="img">
+                    <img src="images/tech.jpg" alt="img">
                     <div class="carousel-caption">
                         <h3>Awesome Tech</h3>
                         <a href="#"><button class="btn">See More</button></a>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/groceries2.jpg" alt="img">
+                    <img src="images/groceries2.jpg" alt="img">
                     <div class="carousel-caption">
                         <h3>Fresh Groceries</h3>
                         <a href="#"><button class="btn">See More</button></a>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/shoes2.jpg" alt="img">
+                    <img src="images/shoes2.jpg" alt="img">
                     <div class="carousel-caption">
                         <h3>Trending Fashion</h3>
                         <a href="#"><button class="btn">See More</button></a>
