feat- refactors content in the nav bar

--- a/furniture.html
+++ b/furniture.html
@@ -17,27 +17,12 @@
     <header class="header">
         <div class="header-1">
             <a href="#" class="logo"><i class="fas fa-shopping-basket"></i>Skymall</a>
-            <form action="" class="search-box-container">
-                <input type="search" id="search-box" placeholder="search here....">
-                <label for="search-box" class="fas fa-search"></label>
-            </form>
-        </div>
-
-        <div class="header-2">
-            <div id="menu-bar" class="fas fa-bars"></div>
             <nav class="navbar">
-                <a href="index.html">home</a>
+                <a href="index.html">Home</a>
                 <a href="fashion.html">Fashion</a>
-                <a href="furniture.html">furnitures</a>
+                <a href="groceries.html">Groceries</a>
                 <a href="Electronics.html">Electronics</a>
-
             </nav>
-
-            <div class="icons">
-                <a href="#" class="fas fa-shopping-cart"></a>
-                <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="fas fa-shopping-cart"></a>
-            </div>
         </div>
     </header>
 
